@@ -1,3 +1,10 @@
+2009-07-06  Andreas Kupries  <andreask@activestate.com>
+
+	* library/template/templatevfs.tcl (memchan): Fix result for
+	* pkgIndex.tcl: unix. The bug was reported on the wiki. The fix
+	  there was wrong, did improper handling of the $args argument.
+	  Fixed here. Version bumped to 1.5.3.
+
 2009-05-14  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* library/zipvfs.tcl: Handle directory names that include
